--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,6 @@
-org.gradle.daemon=true
-org.gradle.jvmargs=-Xms128m -Xmx1500m
-org.gradle.configureondemand=true
+#Wed Jul 05 22:33:31 MDT 2017
+distributionBase=GRADLE_USER_HOME
+distributionPath=wrapper/dists
+zipStoreBase=GRADLE_USER_HOME
+zipStorePath=wrapper/dists
+distributionUrl=https\://services.gradle.org/distributions/gradle-4.1-milestone-1-all.zip
