--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -4,13 +4,16 @@
     android:versionCode="1"
     android:versionName="Beta 0.1" >
 
-    <uses-sdk android:minSdkVersion="9" android:targetSdkVersion="25" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/GdxTheme" >
+        <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version"/>
+        <activity android:name="com.google.android.gms.ads.AdActivity" android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"/>
         <activity
             android:name="zyzxdev.swtch.AndroidLauncher"
             android:label="@string/app_name" 
