--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -18,7 +18,8 @@
             android:name="zyzxdev.swtch.AndroidLauncher"
             android:label="@string/app_name" 
             android:screenOrientation="portrait"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenSize">
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
+            android:resizeableActivity="false">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
